--- a/index.html
+++ b/index.html
@@ -64,18 +64,6 @@
       margin-left: 20px; /* Add spacing between the image and summary */
     }
 
-    .social-links {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-
-    .social-link {
-      margin: 0 10px;
-      font-size: 24px;
-      color: #333;
-    }
-
     .pdf-button {
       background-color: #0074D9; /* Change this color to the shade of blue you prefer */
       color: #fff;
@@ -88,6 +76,13 @@
   </style>
 </head>
 <body>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 <header>
   <h1>Alexandros Papathanasiou</h1>
   <p class="contact-info">
@@ -113,17 +108,6 @@
   </div>
 </div>
 
-<!-- Social Media Links Section -->
-<div class="resume-section">
-  <h2 class="section-header">Social Media</h2>
-  <div class="social-links">
-    <a class="social-link" href="https://www.facebook.com/alex.pap.374/"><i class="fab fa-facebook"></i></a>
-    <a class="social-link" href="https://www.instagram.com/alexpapatha/"><i class="fab fa-instagram"></i></a>
-    <a class="social-link" href="https://www.linkedin.com/in/alex-pap-51537624b/"><i class="fab fa-linkedin"></i></a>
-    <a class="social-link" href="https://github.com/StyleDiablo"><i class="fab fa-github"></i></a>
-  </div>
-</div>
-
 <!-- Open PDF Button with Font Awesome Icon -->
 <div class="resume-section">
   <h2 class="section-header">View Resume PDF</h2>
@@ -138,3 +122,4 @@
 </script>
 </body>
 </html>
+
