--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
       border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
+
+    }
+    .github-link {
+      float: right;
+      width: 30%;
     }
   </style>
 </head>
@@ -110,16 +115,19 @@
 
 <!-- Open PDF Button with Font Awesome Icon -->
 <div class="resume-section">
-  <h2 class="section-header">View Resume PDF</h2>
-  <button class="pdf-button" onclick="openPDF()"><i class="fas fa-file-pdf"></i></button>
+  <h2 class="section-header">Resume</h2>
+  <button class="pdf-button" onclick="openPDF()"><i class="fas fa-file-pdf "></i></button>
+  <p><a href="https://github.com/StyleDiablo" class="github-link"><i class="fab fa-github"></i> Check Out My Work In GitHub</a></p>
 </div>
+
 
 <script>
   function openPDF() {
     // Replace the URL with the actual URL of your hosted PDF file
-    window.open('https://drive.google.com/file/d/18vFdLzPdOYID4a6-dWvpvBFqOD7rm9qr/view?usp=sharing', '_blank');
+    window.open('https://drive.google.com/file/d/1c4IDsTVTnsqWbjSH65GAgcpwYYWAuznQ/view?usp=sharing', '_blank');
   }
 </script>
 </body>
 </html>
+
 
