--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
     .contact-info {
       margin-top: 10px;
     }
+    .menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100px;
+    }
+
+    .menu ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+    }
+
+    .menu li {
+      margin: 0 100px;
+    }
+
+    .menu a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+      font-size: 16px;
+    }
 
     .resume-section {
       border: 1px solid rgba(71, 190, 39, 0.82);
@@ -61,28 +85,27 @@
 
     .summary-container {
       flex: 1;
-      margin-left: 20px; /* Add spacing between the image and summary */
+      margin-left: 20px;
     }
 
     .pdf-button {
-      background-color: #0074D9; /* Change this color to the shade of blue you prefer */
+      background-color: #0074D9;
       color: #fff;
       padding: 10px 20px;
       border: none;
       border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
-
+      width: 90%;
     }
     .github-link {
       float: right;
-      width: 30%;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-<nav>
-  <ul>
+<nav class="menu">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
@@ -96,7 +119,6 @@
   </p>
 </header>
 
-<!-- Images Section -->
 <div class="resume-section">
   <h2 class="section-header"></h2>
   <div class="image-container">
@@ -113,7 +135,6 @@
   </div>
 </div>
 
-<!-- Open PDF Button with Font Awesome Icon -->
 <div class="resume-section">
   <h2 class="section-header">Resume</h2>
   <button class="pdf-button" onclick="openPDF()"><i class="fas fa-file-pdf "></i></button>
@@ -123,8 +144,7 @@
 
 <script>
   function openPDF() {
-    // Replace the URL with the actual URL of your hosted PDF file
-    window.open('https://drive.google.com/file/d/1LweXEGpUjjhdkPAMPzYinE28QnwhAhOG/view?usp=sharing', '_blank');
+    window.open('https://drive.google.com/file/d/1c4IDsTVTnsqWbjSH65GAgcpwYYWAuznQ/view?usp=sharing', '_blank');
   }
 </script>
 </body>
