--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,38 @@
   .social-links li {
     margin: 10px 0;
   }
+  
+  .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+  }
+
+  .menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+  }
+
+  .menu li {
+    margin: 0 100px;
+  }
+
+  .menu a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+  }
 
 </style>
 <body>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
+<nav class="menu">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
 <section class="social-links">
@@ -43,6 +67,7 @@
     <li><a href="https://www.facebook.com/alex.pap.374/"><i class="fab fa-facebook"></i>Facebook</a></li>
     <li><a href="https://www.instagram.com/alexpapatha/"><i class="fab fa-instagram"></i>Instagram</a></li>
     <li><a href="https://www.linkedin.com/in/alex-pap-51537624b/"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
+    <li><a href="https://github.com/StyleDiablo"><i class="fab fa-github"></i>GitHub</a></li>
   </ul>
 </section>
 
