--- a/about.html
+++ b/about.html
@@ -2,55 +2,10 @@
 <html>
 <head>
   <title>About</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<style>
-  body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #630c69;
-  }
 
-  header {
-    text-align: center;
-    background-color: rgba(71, 190, 39, 0.82);
-    color: #000000;
-    padding: 20px;
-  }
-
-  .resume-section {
-    border: 1px solid rgba(71, 190, 39, 0.82);
-    background-color: rgba(71, 190, 39, 0.82);
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px;
-  }
-  .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-  }
-
-  .menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-  }
-
-  .menu li {
-    margin: 0 100px;
-  }
-
-  .menu a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 16px;
-  }
-    </style>
   <body>
-
   <nav class="menu">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
