--- a/contact.html
+++ b/contact.html
@@ -3,57 +3,8 @@
 <head>
   <title>Contact</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<style>
-  body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #630c69;
-  }
-  .social-links {
-    background-color: rgba(71, 190, 39, 0.82);
-    padding: 20px;
-  }
-
-  .social-links h2 {
-    font-size: 24px;
-    margin-top: 0;
-  }
-
-  .social-links ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  .social-links li {
-    margin: 10px 0;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-  }
-
-  .menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-  }
-
-  .menu li {
-    margin: 0 100px;
-  }
-
-  .menu a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 16px;
-  }
-
-</style>
 <body>
 <nav class="menu">
   <li><a href="index.html">Home</a></li>
@@ -61,16 +12,16 @@
   <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
-<section class="social-links">
-  <h2>Social Media</h2>
-  <ul>
-    <li><a href="https://www.facebook.com/alex.pap.374/"><i class="fab fa-facebook"></i>Facebook</a></li>
-    <li><a href="https://www.instagram.com/alexpapatha/"><i class="fab fa-instagram"></i>Instagram</a></li>
-    <li><a href="https://www.linkedin.com/in/alex-pap-51537624b/"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
-    <li><a href="https://github.com/StyleDiablo"><i class="fab fa-github"></i>GitHub</a></li>
+<div class="contact-section">
+  <h2 class="section-header">Contact Me</h2>
+  <p>Contact me through these social media platforms:</p>
+  <ul class="social-media-links">
+    <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+    <li><a href="#" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+    <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
+    <li><a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
   </ul>
-</section>
-
+</div>
 
 </body>
 </html>
