--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
   <h2 class="section-header">Contact Me</h2>
   <p>Contact me through these social media platforms:</p>
   <ul class="social-media-links">
-    <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-    <li><a href="#" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-    <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
-    <li><a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+    <li><a href="https://www.facebook.com/alex.pap.374/" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+    <li><a href="https://www.instagram.com/alexpapatha/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+    <li><a href="https://www.linkedin.com/in/alex-pap-51537624b/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
+    <li><a href="https://github.com/StyleDiablo" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
   </ul>
 </div>
 
