--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header>
   <h1>Alexandros Papathanasiou</h1>
   <p class="contact-info">
-    Email: <a href="mailto:cs03308@uoi.gr">cs03308@uoi.gr</a><br>
+    Email: <a href="mailto:cs03308@uoi.gr">alexpap6898@gmail.com</a><br>
     Address: Litochoro, Pieria, Greece
   </p>
 </header>
@@ -51,7 +51,7 @@
 
 <script>
   function openPDF() {
-    window.open('https://drive.google.com/file/d/1c4IDsTVTnsqWbjSH65GAgcpwYYWAuznQ/view?usp=sharing', '_blank');
+    window.open('https://drive.google.com/file/d/1zDUfBhi7VXIyiJ_F4Rlbp4Mse1Trm7dH/view?usp=sharing', '_blank');
   }
 </script>
 </body>
